--- a/style.css
+++ b/style.css
@@ -16,3 +16,11 @@ h2{
     text-align: center;
     font-size: 2em;
 }
+
+.font-fa{
+    font-family: "Playwrite BE VLG", cursive;
+}
+
+.font-style{
+    font-style: italic;
+}
